# Starling

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
scripts/: setup.sh
src/: CMakeLists.txt  file_entry.cpp  file_entry.h  main.cpp  main_old.cpp  music_tree.h  playback.cpp  playback.h  playback_buffer.h  sound_file.h
src/common/: trace.h
src/sound/: music_queue.h  playback.cpp  playback.h  playback_engine.cpp  playback_engine.h  playback_manager.cpp  playback_manager.h  playback_state.h  player_cache.cpp  player_cache.h  song_queue.h  sound_file.h
src/sound/playback/: linux_playback.cpp  test_playback.cpp
src/ui/: player_controls.cpp  player_controls.h  song_queue.h  song_time.cpp  song_time.h
test/: CMakeLists.txt  playback_engine_tests.cpp  playback_manager_tests.cpp  player_cache_tests.cpp
test/mock/: mock_cache.h  mock_engine.h  mock_player.h  mock_sound_file.h
test/music_queue_tests/: queue_tests.cpp
test/playback_manager_tests/: playback_manager_test.cpp
test/sound_file_tests/: test_wav.cpp
test/time_tests/: song_time_tests.cpp
